kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: cicd-demo

  template:
    metadata:
      labels:
        app: cicd-demo

    spec:
      containers:
      - name: cicd-demo
        image: harshalsvaidyaa/cicd-demo:v4
        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
