kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cicd-demo-service

spec:
  selector:
    app: cicd-demo

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: NodePort
