kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cicd-demo-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: cicd-demo.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: cicd-demo-service
            port:
              number: 80
